# rewriter-pad

./: .gitignore  CROSS-COMPILATION.md  Cargo.toml  GITHUB-DEPLOYMENT.md  README.md  build-all-platforms.bat  build-all-platforms.sh  build.rs
.cargo/: config.toml
.github/workflows/: release.yml
src/: lib.rs  main.rs
src/ui/: bottom_bar.rs  main_panel.rs  mod.rs  modal.rs  top_menu.rs
